Финальный проект №9 - тестирование - #9