@@ -90,6 +90,6 @@ class SubTaskEpicHandlerTest {
 
         assertNotNull(tasksFromManager, "Задачи не возвращаются");
         assertEquals(1, tasksFromManager.size(), "Некорректное количество задач");
-        assertEquals("Подзадача 1", tasksFromManager.get(0).getName(), "Некорректное имя задачи");
+        assertEquals("Подзадача 1", tasksFromManager.getFirst().getName(), "Некорректное имя задачи");
     }
 }
